# mail

./: .gitignore  README.md  json_to_yaml.py  mailarchiver.py  pyproject.toml  pyqt_files.py  requirements.txt
